# a2ps

./: .a2ps.prcs_aux  .prev-version  .travis.yml  ANNOUNCE  AUTHORS  ChangeLog  Makefile.am  Makefile.maint  README-cvs  bootstrap  configure.ac
afm/: Makefile.am
arch/os2/: Makefile.os2  a2ps-site.cfg.os2  a2ps_cfg.os2  config.h.os2  gsse.cmd.os2
auxdir/: Makefile.am  config.rpath  msdos.sh  update-ogonkify.sh
build-aux/: config.rpath  make-faq.sed  msdos.sh
contrib/: Makefile.am  card.in  card.m4  fixbb.m4  fixnt.l  fixps.in  fixps.m4  pdiff.in  pdiff.m4  psmandup.in  psmandup.m4  psset.in  psset.m4  shell.m4
contrib/emacs/: Makefile.am
contrib/sample/: Makefile.am  main.c
doc/: .a2psrc  Makefile.am  a2ps.texi  contributors.txt  make-authors.pl  regex.texi  sample.eps  translators.pl  translators.texi  translators.txt
encoding/: Makefile.am
etc/: Makefile.am  a2ps-site.cfg.in  a2ps_cfg.in
fonts/: Makefile.am
lib/: Makefile.am  a2ps.h  addext.c  alloca.c  ansi2knr.c  argmatch.c  argmatch.h  argv.c  argv.h  atexit.c  backupfile.c  backupfile.h  basename.c  caret.c  caret.h  closeout.c  closeout.h  common.c  common.h  confg.h  darray.c  darray.h  dirname.c  dirname.h  document.c  document.h  dsc.c  dsc.h  dstring.c  dstring.h  dummypwd.h  encoding.c  encoding.h  error.c  error.h  faces.c  faces.h  filalign.c  filalign.h  filtdir.c  (+122 more)
liba2ps/: Makefile.am  a2ps.h  argmatch.h  argv.c  argv.h  backupfile.c  backupfile.h  basename.c  caret.c  closeout.h  common.c  confg.gperf  confg.h  darray.c  darray.h  dirname.c  document.c  document.h  dsc.c  dsc.h  dstring.c  dummypwd.h  encoding.c  faces.c  filalign.c  filalign.h  filtdir.c  fjobs.c  fjobs.h  fonts.h  fonts.l  gen.c  getnum.c  getopt.c  getpwuid.c  getshline.c  gettext.h  getuid.c  hashtab.c  hashtab.h  (+54 more)
m4/: Makefile.am  a2_psutils.m4  atexit.m4  file.m4  fp_echo.m4  fullpath.m4  gccwarn.m4  gnulib-cache.m4  gperf-check.m4  lex.m4  libpaper.m4  lpr.m4  m4.m4  perl.m4  rename.m4  strcasecmp.m4  strftim.m4  tterm.m4  xstrtoumax.m4
man/: Makefile.am  Makefile.maint  a2ps.x  card.x  common.x  fixps.x  help2man  pdiff.x  psmandup.x  psset.x  texi2dvi4a2ps.x
ogonkify/: Makefile.am  adobe.afm  ascii.afm  composeglyphs.in  configure.ac  configure.in  cp1250.afm  hp.afm  ibmpc.afm  latin1.afm  latin2.afm  latin3.afm  latin4.afm  latin5.afm  latin6.afm  latin7.afm  latin9.afm  mac.afm  ogonki.afm  ogonkify.in  ogonkify.in.in  pcrb-c.afm  pcrbo-c.afm  pcrr-c.afm  pcrro-c.afm  phvb-c.afm  phvbo-c.afm  phvr-c.afm  phvro-c.afm  ptmb-c.afm  ptmbi-c.afm  ptmbi.afm  ptmr-c.afm  ptmri-c.afm
ogonkify/doc/: Makefile.am  ogonkify.info  ogonkify.texi
ogonkify/m4/: Makefile.am  perl.m4
po/: POTFILES.in  ca.po  cs.po  da.po  de.po  es.po  fr.po  it.po  ja.po  ko.po  nl.po  no.po  pl.po  pt.po  ru.po  sl.po  sv.po  tr.po
ppd/: Makefile.am
ps/: Makefile.am  base.ps
sheets/: .a2psrc  Makefile.am  autoconf.ssh  b.ssh  html.ssh  python.ssh  sheets.map
src/: Makefile.am  buffer.c  buffer.h  delegate.c  delegate.h  ffaces.c  ffaces.h  generate.c  generate.h  lexps.h  lexps.l  lexssh.l  long-options.c  long-options.h  main.c  main.h  parsessh.y  read.c  read.h  regex.c  regex.h  select.c  select.h  sheets-map.l  ssheet.c  ssheet.h  sshread.c  sshread.h  version-etc.c  version-etc.h  versions.c  versions.h  yy2ssh.h
tests/: Makefile.am  a2ps-tst.cfg.in  align-1.tst  backup.tst  contrib.tst  cut.tst  defs.in  deleg-1.tst  deleg-2.tst  encoding.tst  guess-1.tst  guess-2.tst  inline.tst  inout-1.tst  inout-2.tst  inout-3.tst  options-1.tst  pages-1.tst  pages-2.tst  params.tst  po.tst  printers.tst  prolog-1.tst  prolog-2.tst  strip.tst  styles.tst  toc.tst  usropt-1.tst  usropt-2.tst  view-diff
tests/gps-ref/: AppDelegate.ps  InsertBlock.ps  ShellNewDummyHook.ps  a2ps.ps  bookie.ps  configure.ps  confirm.ps  ehandler.ps  eplv_chkr.ps  essai2.ps  ex1.ps  ex_PSGETRS.ps  formfeed.ps  ftp2.ps  includeres.ps  mofibida.ps  mtvplot.ps  mutex.ps  pi.ps  polkaIDL.ps  prosamp.ps  psmandup.ps  report.ps  run-help.ps  s-garnam.ps  snacc.ps  space.ps  sqlcrtbl.ps  sqlinit.ps  sqlpq92.ps  sqlspace.ps  strange.ps  symbol.ps  synopsys.ps  tabulation.ps  template.ps  typing.ps  vrcaml.ps  wide.ps
tests/ps-ref/: AppDelegate.ps  InsertBlock.ps  ShellNewDummyHook.ps  a2ps.ps  al1-3.ps  al1-page.ps  al1-sheet.ps  al1-virtual.ps  bookie.ps  configure.ps  confirm.ps  cut.ps  ehandler.ps  encoding.ps  eplv_chkr.ps  essai2.ps  ex1.ps  ex_PSGETRS.ps  formfeed.ps  ftp2.ps  includeres.ps  mofibida.ps  mtvplot.ps  mutex.ps  pages-1.ps  pi.ps  polkaIDL.ps  prolog-1.ps  prolog-4.ps  prosamp.ps  psmandup.ps  report.ps  run-help.ps  s-garnam.ps  snacc.ps  space.ps  sqlcrtbl.ps  sqlinit.ps  sqlpq92.ps  sqlspace.ps  (+12 more)
tests/tstfiles/: 3-pages.txt  AppDelegate.m  ShellNewDummyHook.pas  a2ps.man  bookie.idl  configure.ac  confirm.m3  ehandler  encoding.pre  eplv_chkr.v  essai2.o2c  ex1.asn1  ex_PSGETRS.f90  formfeed.txt  ftp2.pml  includeres  mofibida.hs  mtvplot.octave  mutex.py  polkaIDL.hh  prosamp.pre  psmandup  report.pre  run-help  s-garnam.adb  snacc.mib  sqlcrtbl.sql  sqlinit.ora  sqlpq92.sql  sqlspace.pkb  strange.mail  symbol.pre  synopsys.setup  tabulation.pre  template.e  typing.cl  vrcaml.ml  wide.txt
