# Process this file with automake to create Makefile.in
#
# Copyright 1988-2017 Free Software Foundation, Inc.
#
# This program is free software; you can redistribute it and/or modify
# it under the terms of the GNU General Public License as published by
# the Free Software Foundation; either version 3, or (at your option)
# any later version.
#
# This program is distributed in the hope that it will be useful,
# but WITHOUT ANY WARRANTY; without even the implied warranty of
# MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE.  See the
# GNU General Public License for more details.
#
# You should have received a copy of the GNU General Public License
# along with this program.  If not, see <http://www.gnu.org/licenses/>.
#

# As a new `feature' :), a2ps uses now even more directories
fontsdir = $(pkgdatadir)/fonts

pcg_fonts = pcfont.pfa

## These fonts are *not* GPL.
##cyrillic_fonts =					\
##crr35__i.pfb crr36__i.pfb crr55__i.pfb crr56__i.pfb	\
##colle8.pfb colle9.pfb colle10.pfb			\
##textb18.pfb textb19.pfb textb20.pfb

fonts_DATA = $(pcg_fonts)

EXTRA_DIST = $(fonts_DATA)
